adding auto switching dark mode and light mode

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <body>
     <div class="profile-cover">
         <h1>Agraj P Das</h1>
+        <div class="switch-box">
+            <img>
+        </div>
         <p class="short-catch">This site is intentionally being simple..</p>
         <div class="container">
 
