now suppoer markdown compatable html :) (bhuhuhu)

--- a/index.html
+++ b/index.html
@@ -1,165 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="description"
-        content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index,follow">
-    <meta name="googlebot" content="index,follow">
-
-    <title>bRuttaZz</title>
-    <link rel="stylesheet" href="./assets/style.css">
-    <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="description"
+content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="robots" content="index,follow">
+<meta name="googlebot" content="index,follow">
+<title>bRuttaZz</title>
+<link rel="stylesheet" href="./assets/style.css">
+<link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
 </head>
-
 <body>
-    <div class="profile-cover">
-        <h1>Agraj P Das</h1>
-        <div class="switch-box">
-            <img>
-        </div>
-        <p class="short-catch">This site is intentionally being simple..</p>
-        <div class="container">
-
-            <div class="profile-img">
-                <img src="./assets/images/me.jpg" class="realtar">
-                <img src="./assets/images/avatar.jpg" class="d-none avatar">
-            </div>
-
-            <div class="bio">
-                <div class="bio-info">
-        <span>dob</span><b> 28-10-2001 </b>
-    </div><div class="bio-info">
-        <span>height</span><b> not yet measured </b>
-    </div><div class="bio-info">
-        <span>occupation</span><b> R&D Engineer, Pixdynamics Pvt Ltd </b>
-    </div><div class="bio-info">
-        <span>localization</span><b> Kochi, Kerala </b>
-    </div><div class="bio-info">
-        <span>expertise</span><b> Web Technologies, Applied AI, System Design, Containers </b>
-    </div><div class="bio-info">
-        <span>proficient human languages</span><b> Malayalam, English </b>
-    </div><div class="bio-info">
-        <span>proficient computer languages</span><b> Python, JS, Go, C++ </b>
-    </div><div class="bio-info">
-        <span>areas of interest</span><b> System Design, System Kernal, Computer Networking </b>
-    </div><div class="bio-info">
-        <span>pgp keys</span><b> <a href="./facts/pgp.key" >download</a> </b>
-    </div><div class="bio-info">
-        <span>github</span><b> <a href="https://github.com/bruttazz">bRuttaZz</a> </b>
-    </div><div class="bio-info">
-        <span>portfolio (resume maybe)</span><b> <a href="https://docs.google.com/document/d/1b6DY4mMml01b1PXEojT7NmB7B3qYrsX8q_c0ABdWuI0/edit?usp=sharing">G-drive</a> </b>
-    </div>
-                    <!-- will be filled with about.me.json content  -->
-            </div>
-
-        </div>
-
-        <!-- the contact card  -->
-        <div class="profile-about">
-            
-        <p><center> "Just another Software Enthusiast, FOSS Lover And Philanthropist!" </center></p>
-        <div class="container-about">
-            <div id="contact-keys" class="right">
-                <div><b>email : </b></div><div><b>phone : </b></div><div><b>telegram : </b></div><div><b>matrix : </b></div>
-            </div>
-            <div id="contact-vals" class="left">
-                <div> &nbsp<a href="mailto:agrajpdas@gmail.com">agrajpdas@gmail.com</a></div><div> &nbsp<a href="tel:919207322658">+91 9207322658</a></div><div> &nbsp<a href="https://t.me/bruttazz57">@bruttazz57</a></div><div> &nbsp<a href="https://matrix.to/#/@bruttazz:matrix.org">@bruttazz:matrix.org</a></div>
-            </div>
-        </div>
-        <center>
-            <p>
-                <a href=https://github.com/bruttazz>
-            <img src="./assets/images/socialmedia/github.png" width=20px> 
-        </a><a href=https://fosstodon.org/@bRuttaZz>
-            <img src="./assets/images/socialmedia/mastodon.png" width=20px> 
-        </a><a href=https://www.instagram.com/bRuttaZz>
-            <img src="./assets/images/socialmedia/insta.png" width=20px> 
-        </a><a href=https://www.linkedin.com/in/agraj-p-das-a656a423b>
-            <img src="./assets/images/socialmedia/linkedin.png" width=20px> 
-        </a><a href=https://twitter.com/bruttazz_>
-            <img src="./assets/images/socialmedia/twitter.png" width=20px> 
-        </a>
-            </p>
-        </center>
-    
-
-        </div>
-
-        <!-- the projects section  -->
-        <div class="project-sec">
-            <b class="project-sec-heading">
-                <span>
-                    <img src="./assets/images/craps/pinned.png" width="20px">
-                </span>
-                pinned projects
-            </b>
-            <div class="project-cards">
-                <div class="project-card">
-        <div>
-            <center>
-                <a href="https://bruttazz.github.io/devc">
-                    <img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
-                </a>
-                <br><b>devC</b>
-            </center>
-        </div>
-        <div>
-            <p>A linux command line utility to build 'python venv' like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
-            <p>
-                <a href="https://github.com/bruttazz/devc">
-                    <span class="source-link">source</span>
-                </a>
-                <span class="license">license : GPLv3</span>
-            </p>
-        </div>
-    </div><div class="project-card">
-        <div>
-            <center>
-                <a href="https://bruttazz.github.io/colbaking">
-                    <img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/colbaking/main/game/preview.png">
-                </a>
-                <br><b>Colbaking</b>
-            </center>
-        </div>
-        <div>
-            <p>Nothing but an old school chrome-dino-game clone!</p>
-            <p>
-                <a href="https://github.com/bruttazz/colbaking">
-                    <span class="source-link">source</span>
-                </a>
-                <span class="license">license : MIT</span>
-            </p>
-        </div>
-    </div>
-                <!-- project cards comes here  -->
-            </div>
-        </div>
-    </div>
-
-    <script>
-        const avatar = document.querySelector(".avatar")
-        const realtar = document.querySelector(".realtar")
-        document.querySelector(".profile-img").addEventListener("click", () => {
-            if (realtar.classList.contains("d-none")) {
-                realtar.classList.remove("d-none")
-                avatar.classList.add("d-none")
-            } else {
-                realtar.classList.add("d-none")
-                avatar.classList.remove("d-none")
-            }
-        });
-    </script>
-    <noscript>Pardon! This page require Javascript to render. Kindly use a modern browser :)</noscript>
+<div class="profile-cover">
+<h1>Agraj P Das</h1>
+<div class="switch-box">
+<img>
+</div>
+<p class="short-catch">This site is intentionally being simple..</p>
+<div class="container">
+<div class="profile-img">
+<img src="./assets/images/me.jpg" class="realtar">
+</div>
+<div class="bio">
+<div class="bio-info">
+<span>dob</span><b> 28-10-2001 </b>
+</div><div class="bio-info">
+<span>height</span><b> not yet measured </b>
+</div><div class="bio-info">
+<span>occupation</span><b> R&D Engineer, Pixdynamics Pvt Ltd </b>
+</div><div class="bio-info">
+<span>localization</span><b> Kochi, Kerala </b>
+</div><div class="bio-info">
+<span>expertise</span><b> Web Technologies, Applied AI, System Design, Containers </b>
+</div><div class="bio-info">
+<span>proficient human languages</span><b> Malayalam, English </b>
+</div><div class="bio-info">
+<span>proficient computer languages</span><b> Python, JS, Go, C++ </b>
+</div><div class="bio-info">
+<span>areas of interest</span><b> System Design, System Kernal, Computer Networking </b>
+</div><div class="bio-info">
+<span>pgp keys</span><b> <a href="./facts/pgp.key" >download</a> </b>
+</div><div class="bio-info">
+<span>github</span><b> <a href="https://github.com/bruttazz">bRuttaZz</a> </b>
+</div><div class="bio-info">
+<span>portfolio (resume maybe)</span><b> <a href="https://docs.google.com/document/d/1b6DY4mMml01b1PXEojT7NmB7B3qYrsX8q_c0ABdWuI0/edit?usp=sharing">G-drive</a> </b>
+</div>
+<!-- will be filled with about.me.json content  -->
+</div>
+</div>
+<!-- the contact card  -->
+<div class="profile-about">
+<p><center> "Just another Software Enthusiast, FOSS Lover And Philanthropist!" </center></p>
+<div class="container-about">
+<div id="contact-keys" class="right">
+<div><b>email : </b></div><div><b>phone : </b></div><div><b>telegram : </b></div><div><b>matrix : </b></div>
+</div>
+<div id="contact-vals" class="left">
+<div> &nbsp<a href="mailto:agrajpdas@gmail.com">agrajpdas@gmail.com</a></div><div> &nbsp<a href="tel:919207322658">+91 9207322658</a></div><div> &nbsp<a href="https://t.me/bruttazz57">@bruttazz57</a></div><div> &nbsp<a href="https://matrix.to/#/@bruttazz:matrix.org">@bruttazz:matrix.org</a></div>
+</div>
+</div>
+<center>
+<p>
+<a href=https://github.com/bruttazz>
+<img src="./assets/images/socialmedia/github.png" width=20px>
+</a><a href=https://fosstodon.org/@bRuttaZz>
+<img src="./assets/images/socialmedia/mastodon.png" width=20px>
+</a><a href=https://www.instagram.com/bRuttaZz>
+<img src="./assets/images/socialmedia/insta.png" width=20px>
+</a><a href=https://www.linkedin.com/in/agraj-p-das-a656a423b>
+<img src="./assets/images/socialmedia/linkedin.png" width=20px>
+</a><a href=https://twitter.com/bruttazz_>
+<img src="./assets/images/socialmedia/twitter.png" width=20px>
+</a>
+</p>
+</center>
+</div>
+<!-- the projects section  -->
+<div class="project-sec">
+<b class="project-sec-heading">
+<span>
+<img src="./assets/images/craps/pinned.png" width="20px">
+</span>
+pinned projects
+</b>
+<div class="project-cards">
+<div class="project-card">
+<div>
+<center>
+<a href="https://bruttazz.github.io/devc">
+<img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
+</a>
+<br><b>devC</b>
+</center>
+</div>
+<div>
+<p>A linux command line utility to build 'python venv' like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
+<p>
+<a href="https://github.com/bruttazz/devc">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : GPLv3</span>
+</p>
+</div>
+</div><div class="project-card">
+<div>
+<center>
+<a href="https://bruttazz.github.io/colbaking">
+<img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/colbaking/main/game/preview.png">
+</a>
+<br><b>Colbaking</b>
+</center>
+</div>
+<div>
+<p>Nothing but an old school chrome-dino-game clone!</p>
+<p>
+<a href="https://github.com/bruttazz/colbaking">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : MIT</span>
+</p>
+</div>
+</div>
+<!-- project cards comes here  -->
+</div>
+</div>
+</div>
+<script>
+const avatar = document.createElement("img")
+avatar.classList.add("avatar")
+avatar.src = "./assets/images/avatar.jpg"
+const profileImageContainer = document.querySelector(".profile-img")
+const realtar = document.querySelector(".realtar")
+let avatarFlag = true;
+profileImageContainer.addEventListener("click", () => {
+if (avatarFlag) {
+profileImageContainer.removeChild(realtar);
+profileImageContainer.append(avatar);
+} else {
+const currentChild = document.querySelector(".avatar")
+profileImageContainer.removeChild(currentChild);
+profileImageContainer.append(realtar);
+}
+avatarFlag = !avatarFlag
+});
+</script>
+<noscript>Pardon! This page require Javascript to render. Kindly use a modern browser :)</noscript>
 </body>
 <footer>
-    <center>
-        <a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue;">--</a>
-    </center>
+<center>
+<a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue;">--</a>
+</center>
 </footer>
-
 </html>
