humm nothing special

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 <p><center> "Just another Software Enthusiast, FOSS Lover And Philanthropist!" </center></p>
 <div class="container-about">
 <div id="contact-keys" class="right">
-<div><b>email : </b></div><div><b>phone : </b></div><div><b>telegram : </b></div><div><b>matrix : </b></div>
+<div><b>email : </b></div><div><b>telegram : </b></div><div><b>matrix : </b></div>
 </div>
 <div id="contact-vals" class="left">
-<div> &nbsp<a href="mailto:agrajpdas@gmail.com">agrajpdas@gmail.com</a></div><div> &nbsp<a href="tel:919207322658">+91 9207322658</a></div><div> &nbsp<a href="https://t.me/bruttazz57">@bruttazz57</a></div><div> &nbsp<a href="https://matrix.to/#/@bruttazz:matrix.org">@bruttazz:matrix.org</a></div>
+<div> &nbsp<a href="mailto:agrajpdas@gmail.com">agrajpdas@gmail.com</a></div><div> &nbsp<a href="https://t.me/bruttazz57">@bruttazz57</a></div><div> &nbsp<a href="https://matrix.to/#/@bruttazz:matrix.org">@bruttazz:matrix.org</a></div>
 </div>
 </div>
 <center>
