--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 <meta name="twitter:site" content="@bRuttaZz">
 <meta name="twitter:creator" content="@bRuttaZz">
 <meta name="twitter:image" content="https://brutt.site/assets/images/avatar.jpg">
+<meta name="google-site-verification" content="yy0W_kqfIlLBRYX7Eeqw8CKlFTdJ6Gp-ZlJSmWBMW04" />
+<meta name="google-site-verification" content="OJKRiwUcAniBZKSSyY64QsZPA6mXm99Rx3vc_PrN4gs" />
 </head>
 <body>
 <div class="profile-cover">
@@ -56,7 +58,7 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 <p class="short-catch">This site is intentionally being simple..</p>
 <div class="container">
 <div class="profile-img">
-<img src="./assets/images/avatar.jpg" class="realtar">
+<img src="./assets/images/me.jpg" class="realtar">
 </div>
 <div class="bio">
 <div class="bio-info">
@@ -138,6 +140,24 @@ pinned projects
 </div><div class="project-card">
 <div>
 <center>
+<a href="https://github.com/bRuttaZz/stmp">
+<img width="130px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
+</a>
+<br><b>STMP</b>
+</center>
+</div>
+<div>
+<p>STMP: Sitty Talky Messaging Protocol : A primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with your office mates over LAN!</p>
+<p>
+<a href="https://github.com/bRuttaZz/stmp">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : MIT</span>
+</p>
+</div>
+</div><div class="project-card">
+<div>
+<center>
 <a href="https://bruttazz.github.io/colbaking">
 <img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/colbaking/main/game/preview.png">
 </a>
@@ -161,7 +181,7 @@ pinned projects
 <script>
 const avatar = document.createElement("img")
 avatar.classList.add("avatar")
-avatar.src = "./assets/images/me.jpg"
+avatar.src = "./assets/images/avatar.jpg"
 const profileImageContainer = document.querySelector(".profile-img")
 const realtar = document.querySelector(".realtar")
 let avatarFlag = true;
