some minor updates

--- a/index.html
+++ b/index.html
@@ -10,43 +10,75 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
 <title>bRuttaZz</title>
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@id": "https://brutt.site",
+"@type": "WebPage",
+"name": "Agraj P Das (bRuttaZz)",
+"url": "https://brutt.site",
+"description": "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!",
+"logo": "https://brutt.site/assets/images/avatar.jpg",
+"sameAs": [
+"https://twitter.com/bruttazz_",
+"https://github.com/bruttazz",
+"https://instagram.com/bruttazz",
+"https://fosstodon.org/@bRUttaZz"
+]
+}
+</script>
 <link rel="stylesheet" href="./assets/style.css">
 <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
+<link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
+crossorigin="anonymous">
+<meta property="og:locale" content="en_GB">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Agraj P Das (@bRuttaZz)">
+<meta property="og:description"
+content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
+<meta property="og:url" content="https://brutt.site">
+<meta property="og:site_name" content="bRuttaZz">
+<meta property="og:image" content="https://brutt.site/assets/images/avatar.jpg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Agraj P Das (@bRuttaZz)">
+<meta name="twitter:description"
+content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
+<meta name="twitter:site" content="@bRuttaZz">
+<meta name="twitter:creator" content="@bRuttaZz">
+<meta name="twitter:image" content="https://brutt.site/assets/images/avatar.jpg">
 </head>
 <body>
 <div class="profile-cover">
 <h1>Agraj P Das</h1>
-<div class="switch-box">
-<img>
+<div class="theme-swticher theme-switcher-btn text-center m-md-4 ">
+<span class="mdi mdi-brightness-6 fs-5"></span>
 </div>
 <p class="short-catch">This site is intentionally being simple..</p>
 <div class="container">
 <div class="profile-img">
-<img src="./assets/images/me.jpg" class="realtar">
+<img src="./assets/images/avatar.jpg" class="realtar">
 </div>
 <div class="bio">
 <div class="bio-info">
-<span>dob</span><b> 28-10-2001 </b>
+<span>dob</span><b> &nbsp28-10-2001 </b>
 </div><div class="bio-info">
-<span>height</span><b> not yet measured </b>
+<span>height</span><b> &nbspnot yet measured </b>
 </div><div class="bio-info">
-<span>occupation</span><b> R&D Engineer, Pixdynamics Pvt Ltd </b>
+<span>occupation</span><b> &nbspR&D Engineer, Pixdynamics Pvt Ltd </b>
 </div><div class="bio-info">
-<span>localization</span><b> Kochi, Kerala </b>
+<span>localization</span><b> &nbspKochi, Kerala </b>
 </div><div class="bio-info">
-<span>expertise</span><b> Web Technologies, Applied AI, System Design, Containers </b>
+<span>expertise</span><b> &nbspWeb Technologies, Applied AI, System Design, Containers </b>
 </div><div class="bio-info">
-<span>proficient human languages</span><b> Malayalam, English </b>
+<span>proficient human languages</span><b> &nbspMalayalam, English </b>
 </div><div class="bio-info">
-<span>proficient computer languages</span><b> Python, JS, Go, C++ </b>
+<span>proficient computer languages</span><b> &nbspPython, JS, Go, C++ </b>
 </div><div class="bio-info">
-<span>areas of interest</span><b> System Design, System Kernal, Computer Networking </b>
+<span>ask me about</span><b> &nbspSystem Design, Containers, Computer Networking </b>
 </div><div class="bio-info">
-<span>pgp keys</span><b> <a href="./facts/pgp.key" >download</a> </b>
+<span>pgp keys</span><b> &nbsp<a href="./facts/pgp.key" >4546 EC98 5FA6 E6CD E09A 5114 18CD 31EE 87B1 AA02</a> </b>
 </div><div class="bio-info">
-<span>github</span><b> <a href="https://github.com/bruttazz">bRuttaZz</a> </b>
-</div><div class="bio-info">
-<span>portfolio (resume maybe)</span><b> <a href="https://docs.google.com/document/d/1b6DY4mMml01b1PXEojT7NmB7B3qYrsX8q_c0ABdWuI0/edit?usp=sharing">G-drive</a> </b>
+<span>github</span><b> &nbsp<a href="https://github.com/bruttazz">bRuttaZz</a> </b>
 </div>
 <!-- will be filled with about.me.json content  -->
 </div>
@@ -63,17 +95,17 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 </div>
 </div>
 <center>
-<p>
+<p class="social-media-icons">
 <a href=https://github.com/bruttazz>
-<img src="./assets/images/socialmedia/github.png" width=20px>
+<span class="mdi mdi-github"></span>
 </a><a href=https://fosstodon.org/@bRuttaZz>
-<img src="./assets/images/socialmedia/mastodon.png" width=20px>
+<span class="mdi mdi-mastodon"></span>
 </a><a href=https://www.instagram.com/bRuttaZz>
-<img src="./assets/images/socialmedia/insta.png" width=20px>
+<span class="mdi mdi-instagram"></span>
 </a><a href=https://www.linkedin.com/in/agraj-p-das-a656a423b>
-<img src="./assets/images/socialmedia/linkedin.png" width=20px>
+<span class="mdi mdi-linkedin"></span>
 </a><a href=https://twitter.com/bruttazz_>
-<img src="./assets/images/socialmedia/twitter.png" width=20px>
+<span class="mdi mdi-twitter"></span>
 </a>
 </p>
 </center>
@@ -81,9 +113,7 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 <!-- the projects section  -->
 <div class="project-sec">
 <b class="project-sec-heading">
-<span>
-<img src="./assets/images/craps/pinned.png" width="20px">
-</span>
+<span class="mdi mdi-pin"></span>
 pinned projects
 </b>
 <div class="project-cards">
@@ -131,7 +161,7 @@ pinned projects
 <script>
 const avatar = document.createElement("img")
 avatar.classList.add("avatar")
-avatar.src = "./assets/images/avatar.jpg"
+avatar.src = "./assets/images/me.jpg"
 const profileImageContainer = document.querySelector(".profile-img")
 const realtar = document.querySelector(".realtar")
 let avatarFlag = true;
@@ -146,12 +176,44 @@ profileImageContainer.append(realtar);
 }
 avatarFlag = !avatarFlag
 });
+/**
+* Bind theming switching and ..you knw..!
+*/
+(function bindThemeSwitch() {
+const systemMode = window.matchMedia("(prefers-color-scheme: dark)");
+const setSysTheme = () => {
+if (systemMode.matches) {
+document.documentElement.classList.add("dark")
+sessionStorage.setItem("theme-selection", "dark");
+} else {
+document.documentElement.classList.remove("dark")
+sessionStorage.setItem("theme-selection", "light");
+}
+}
+// set sys theme
+const cachedState = sessionStorage.getItem("theme-selection")
+if (cachedState === "dark")
+document.documentElement.classList.add("dark")
+else if (!cachedState)
+setSysTheme()
+systemMode.addEventListener("change", setSysTheme)
+// add custom button functionality
+document.querySelector(".theme-switcher-btn")?.addEventListener("click", (e) => {
+if (document.documentElement.classList.contains("dark")) {
+document.documentElement.classList.remove("dark");
+sessionStorage.setItem("theme-selection", "light");
+} else {
+document.documentElement.classList.add("dark")
+sessionStorage.setItem("theme-selection", "dark");
+}
+})
+})();
 </script>
 <noscript>Pardon! This page require Javascript to render. Kindly use a modern browser :)</noscript>
 </body>
 <footer>
 <center>
-<a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue;">--</a>
+<a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue;">-</a>
 </center>
 </footer>
 </html>
