making room for blogs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
-<title>bRuttaZz</title>
+<title>Agraj P Das (bRuttaZz)</title>
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -33,14 +33,14 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 crossorigin="anonymous">
 <meta property="og:locale" content="en_GB">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Agraj P Das (@bRuttaZz)">
+<meta property="og:title" content="Agraj P Das (bRuttaZz)">
 <meta property="og:description"
 content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
 <meta property="og:url" content="https://brutt.site">
-<meta property="og:site_name" content="bRuttaZz">
+<meta property="og:site_name" content="Agraj P Das (bRuttaZz)">
 <meta property="og:image" content="https://brutt.site/assets/images/avatar.jpg">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Agraj P Das (@bRuttaZz)">
+<meta name="twitter:title" content="Agraj P Das (bRuttaZz)">
 <meta name="twitter:description"
 content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!">
 <meta name="twitter:site" content="@bRuttaZz">
@@ -54,6 +54,9 @@ content="Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and co
 <div style="color: red;">Pardon! This page require Javascript to render. Kindly use a modern browser :)</div>
 </center>
 </noscript> -->
+<script>
+window.pageIdentifier = "about"
+</script>
 <body>
 <div class="profile-cover nav-bar d-flex">
 <a href="./">
