--- a/projects.html
+++ b/projects.html
@@ -11,15 +11,10 @@ content="Projects of bRuttaZz (Agraj P Das) | List of some of my &#39;just for f
 <meta name="googlebot" content="index,follow">
 <title>Projects | bRuttaZz</title>
 <script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@id": "https://brutt.site",
-"@type": "WebPage",
-"name": "Projects | bRuttaZz",
-"url": "https://brutt.site/projects",
-"description": "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects..",
-"logo": "https://brutt.site/assets/images/avatar.jpg",
-}
+{ "@context" : "https://schema.org" , "@id" : "https://brutt.site" , "@type" : "WebPage" , "name"
+: "Projects | bRuttaZz" , "url" : "https://brutt.site/projects" , "description"
+: "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects.." , "logo"
+: "https://brutt.site/assets/images/avatar.jpg" , }
 </script>
 <link rel="stylesheet" href="./assets/style.css">
 <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
@@ -75,7 +70,64 @@ myBlogs</span></div>
 <!-- content  -->
 <!-- ...  -->
 <!-- projects tab  -->
-TODO
+<h3 class="ps-1">Some of my "fair enough" projects..</h3>
+<div class="project-only-sec">
+<div class="project-card">
+<div class="vertical-align-center">
+<center>
+<a href="https://bruttazz.github.io/devc">
+<img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
+</a>
+<br><b>devC</b>
+</center>
+</div>
+<div class="vertical-align-center">
+<p>A linux command line utility to build &#39;python venv&#39; like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
+<p>
+<a href="https://github.com/bruttazz/devc">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : GPLv3</span>
+</p>
+</div>
+</div><div class="project-card">
+<div class="vertical-align-center">
+<center>
+<a href="https://github.com/bRuttaZz/stmp">
+<img width="130px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
+</a>
+<br><b>STMP</b>
+</center>
+</div>
+<div class="vertical-align-center">
+<p>STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with your office mates over LAN!</p>
+<p>
+<a href="https://github.com/bRuttaZz/stmp">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : MIT</span>
+</p>
+</div>
+</div><div class="project-card">
+<div class="vertical-align-center">
+<center>
+<a href="https://bruttazz.github.io/colbaking">
+<img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/colbaking/main/game/preview.png">
+</a>
+<br><b>Colbaking</b>
+</center>
+</div>
+<div class="vertical-align-center">
+<p>Nothing but an old school chrome-dino-game clone!</p>
+<p>
+<a href="https://github.com/bruttazz/colbaking">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : MIT</span>
+</p>
+</div>
+</div>
+</div>
 <!-- content  -->
 </div>
 <script src="./assets/js/index.js" type="module"></script>
