--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ some "good looking" projects
 </center>
 </div>
 <div class="vertical-align-center">
-<p>A linux command line utility to build 'python venv' like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
+<p>A linux command line utility to build &#39;python venv&#39; like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
 <p>
 <a href="https://github.com/bruttazz/devc">
 <span class="source-link">source</span>
